Update Questions From Class.ipynb
Added another cell.

--- a/notebooks/Questions From Class.ipynb
+++ b/notebooks/Questions From Class.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'one': 1, 'two': 2, 'three': [1, 2, 3], 'four': 'fourth arguement'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {'one':1, 'two':2, 'three':[1, 2, 3], 'four':'fourth arguement'}\n",
     "d"
@@ -45,21 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "myfun() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-e0ccf774e904>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Sending the dictionary itself does not work\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmyfun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: myfun() takes 0 positional arguments but 1 was given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sending the dictionary itself does not work\n",
     "myfun(d)"
@@ -67,17 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'one': 1, 'two': 2, 'three': [1, 2, 3], 'four': 'fourth arguement'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Must send the unpacked (**) dictionary\n",
     "myfun(**d)"
@@ -85,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dog': 18, 'cat': 27, 'final_list': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using an anonmyous dictionary as the arguement\n",
     "myfun(**{'dog':18, 'cat':27,'final_list':[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]})"
@@ -103,20 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'one': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now using the more familar key=value form\n",
-    "myfun(one=1, two)"
+    "myfun(dog=18, one=1, two=2, three=[1, 2, 3])"
    ]
   },
   {
