--- a/notebooks/Basketball dataset - sklearn examples.ipynb
+++ b/notebooks/Basketball dataset - sklearn examples.ipynb
@@ -688,9 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Classification Model\n",
-    "\n",
-    "## <font color = \"red\">Jingwei -- See if you can find a picture of a simple decision tree and put it here to use to describe the basic concepts (the example can be anything -- it doesn't have to be realated to the basketball problem).  Whereas all the students should be somewhat familar with regression, many will have never seen a (formal) decision tree, so I think it would be helpful if we provided a simple example of a tree and a description of how to use it -- make sense?</font> ---Done. To show students the concept the decision tree clearly, I need to talk more than I write below."
+    "## 2. Classification Model\n"
    ]
   },
   {
@@ -1153,7 +1151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1167,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
