Update Basketball dataset - sklearn examples.ipynb

--- a/notebooks/Basketball dataset - sklearn examples.ipynb
+++ b/notebooks/Basketball dataset - sklearn examples.ipynb
@@ -360,7 +360,8 @@
    "outputs": [],
    "source": [
     "# Create linear regression object\n",
-    "regr = linear_model.LinearRegression()"
+    "regr = linear_model.LinearRegression()\n",
+    "regr"
    ]
   },
   {
@@ -652,13 +653,61 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You--<font color = \"red\">\"You see, the red dots are our predictions and they are all located on a plane.\"</font>\n",
+    "\n",
+    "You--<font color = \"red\">\"Also, if you want to test variaty of combinations of the variables, you can make codes to help you automatically decide which variables you need to use based on your metrics.\"</font>\n",
+    "\n",
+    "You--<font color = \"red\">\"For example, I want to find the best model based on MSE and has no more than three input variables.\"</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import itertools \n",
+    "from itertools import combinations\n",
+    "# possible input variables\n",
+    "v_list = ['W','ADJOE','ADJDE','BARTHAG']\n",
+    "# selected variable. initial equal to None\n",
+    "sv = None\n",
+    "# selected metric. initial equal to infinity\n",
+    "s_metric = float('inf')\n",
+    "# number of variables\n",
+    "for i in range(1,4):\n",
+    "    # pick the combination\n",
+    "    for ele in combinations(v_list,i):\n",
+    "        # create linear regression object\n",
+    "        regrC = linear_model.LinearRegression()\n",
+    "        # X variables and Y variable\n",
+    "        df_X_trainC = df[list(ele)]\n",
+    "        df_Y_trainC = df['WAB']\n",
+    "        # Train the model\n",
+    "        regrC.fit(df_X_trainC, df_Y_trainC)\n",
+    "        # test X varibles\n",
+    "        df_X_testC = df_test[list(ele)]\n",
+    "        # Make predictions\n",
+    "        df_Y_predC = regrC.predict(df_X_testC)\n",
+    "        # compute MSE\n",
+    "        t_metric = mean_squared_error(df_test['WAB'], df_Y_predC)\n",
+    "        # choose the least MSE\n",
+    "        if t_metric < s_metric:\n",
+    "            s_metric = t_metric\n",
+    "            sv = list(ele)\n",
+    "# See the result\n",
+    "sv, s_metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "You--<font color = \"red\">\"You see, the red dots are our predictions and they are all located on a plane.\"</font>\n",
-    "\n",
-    "Your friend--<font color = \"blue\">\"I get your point. So the second model is better. Now I think I can use this prediction model to help me predict WAB, but how to deal with the postseason rank? It is not  a numeric value.\"</font>  (See the next cell for the distinct postseason rank values)\n",
+    "Your friend--<font color = \"blue\">\"I get your point. So the last model is better. Now I think I can use this prediction model to help me predict WAB, but how to deal with the postseason rank? It is not  a numeric value.\"</font>  (See the next cell for the distinct postseason rank values)\n",
     "\n",
     "You--<font color = \"red\">\"Your are right. The postseason rank is a **_catagorical value_**, so to predict postseason rank, we need to use a **_classification_** model.\"</font>\n",
     "\n",
@@ -696,7 +745,7 @@
    "metadata": {},
    "source": [
     "In this classification model example, we will show you how to use **_decision tree_** to build classification models. Before we dive into the actual model building process, let's first see what is decision tree. Based on Wikipedia, a decision tree is a flowchart-like structure in which each internal node represents a \"test\" on an attribute (e.g. whether a coin flip comes up heads or tails), each branch represents the outcome of the test, and each leaf node represents a class label. <br>\n",
-    "Suppose we have some data records (left) and a decision tree (right) shown below : <br>\n",
+    "Suppose we have some data records (up) and a decision tree (down) shown below : <br>\n",
     "![Data records for showing decision tree](https://d1jnx9ba8s6j9r.cloudfront.net/blog/wp-content/uploads/2015/01/Decision-Tree-Example-5-Decision-tree-Edureka-768x432.png)\n",
     "![Decision tree](https://d1jnx9ba8s6j9r.cloudfront.net/blog/wp-content/uploads/2015/01/Decision-Tree-Example-6-Decision-tree-Edureka-768x432.png)"
    ]
@@ -715,7 +764,7 @@
     "(The following cells will show simple **_decision tree models_** in scikit-learn. We will create a decision tree classifier to predict POSTSEASON using variables W, ADJOE, ADJDE, BARTHAG, and WAB.\n",
     "\n",
     "\n",
-    "A decision tree classifier is a tree-based model. It will take all the variables in the dataset and split on them. At each split, it either assigns the data point to a class or splits on a different variable. This process continues until there are no more features to split on, or a stopping criteria is reached.\n",
+    "A decision tree classifier is a tree-based model. It will take all the variables in the dataset and split on them. At each split, it either assigns the data point to a class or splits on a different (or the same) variable. This process continues until there are no more features to split on, or a stopping criteria is reached.\n",
     "\n",
     "<font color = \"red\"> You can also find in the following cells that for a decision tree model, many aspects can impact the performance of the decision tree model </font>)\n",
     "model details about this decision tree model can be found here: https://scikit-learn.org/stable/modules/tree.html#classification"
@@ -749,7 +798,7 @@
     "\n",
     "You--<font color = \"red\">\"Okay. Considering that not all teams will participate the postseason matches, we first need to extract the observations that have a postseason rank.\"</font>\n",
     "\n",
-    "Based on the dataset infomation, POSTSEASON column only has 476 non-null values. So, let's first extract those 476 observations and and generate the training set with target variable and input variables. "
+    "Based on the dataset infomation, POSTSEASON column only has 408 non-null values. So, let's first extract those 408 observations and and generate the training set with target variable and input variables. "
    ]
   },
   {
@@ -758,7 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract the 476 observations with non-null postseason ranks\n",
+    "# extract the 408 observations with non-null postseason ranks\n",
     "OBs = df.dropna()\n",
     "OBs"
    ]
@@ -878,7 +927,7 @@
    "source": [
     "Your friend--<font color = \"blue\">\"So, what should we do next, build another decision tree model?\"</font>\n",
     "\n",
-    "You--<font color = \"red\">\"Well, do you know what is a decision tree? \"</font>\n",
+    "You--<font color = \"red\">\"Well, do you know what is our decision tree? \"</font>\n",
     "\n",
     "Your friend--<font color = \"blue\">\"Nope.\"</font>\n",
     "\n",
@@ -1134,6 +1183,61 @@
     "Your friend--<font color = \"blue\">\"You are right. Uh, it is hard to decide which one I will use.\"</font>\n",
     "\n",
     "You--<font color = \"red\">\"Making a model is easy but judging a model is difficult. Good luck to your bets!\"</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The following cell will show you an example of how to use code to help us find models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import gridsearch module\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "# possible input variables\n",
+    "v_list = ['W','ADJOE','ADJDE','BARTHAG','WAB','SEED','TOR','TORD']\n",
+    "# selected variable. initial equal to None\n",
+    "sv = None\n",
+    "# selected model. initial equal to None\n",
+    "sm = None\n",
+    "# selected paramters. initial equal to None\n",
+    "sp = None\n",
+    "# selected accuracy. initial equal to 0\n",
+    "s_accuracy = 0\n",
+    "# number of variables\n",
+    "for i in range(4,9):\n",
+    "    # pick the combination\n",
+    "    for ele in combinations(v_list,i):\n",
+    "        # X variables and Y variable\n",
+    "        TrainC = OBs[list(ele)]\n",
+    "        ClassC = OBs['POSTSEASON']\n",
+    "        # decision tree object\n",
+    "        dtc = tree.DecisionTreeClassifier()\n",
+    "        # parameter grid\n",
+    "        parameters = {'splitter':(\"best\",\"random\"),   \n",
+    "                      'max_depth':[3,4,5],\n",
+    "                      'random_state':[35]}\n",
+    "        # create gridsearch object\n",
+    "        clf_S = GridSearchCV(dtc, parameters, scoring= 'accuracy')\n",
+    "        # train the model\n",
+    "        clf_S.fit(TrainC,ClassC)\n",
+    "        # use the best model to do prediction\n",
+    "        pred_rank = clf_S.best_estimator_.predict(PostSeasonTeams[list(ele)])\n",
+    "        # check preidction accuracy\n",
+    "        accuracy = metrics.accuracy_score(real_rank, pred_rank)\n",
+    "        # choose the highest accuracy model\n",
+    "        if accuracy > s_accuracy:\n",
+    "            s_accuracy = accuracy\n",
+    "            sv = list(ele)\n",
+    "            sp = clf_S.best_params_\n",
+    "            sm = clf_S.best_estimator_\n",
+    "s_accuracy, sv, sp"
    ]
   },
   {
