Update 1.0 Intro to Python.ipynb
Added f-strings

--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# To remember this, think \"get current working directory.\"  This is the base\n",
@@ -57,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"Hello World!\")"
    ]
@@ -294,9 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.141592653589793, 3.141592653589793, 3.141592653589793)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# More on Namespaces - three different Pi constants ...\n",
     "# Overlap in constants for pi -- one in each namespace\n",
@@ -508,16 +535,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The format() method for string objects\n",
+    "#### The format() method for string objects\n",
     "\n",
     "https://docs.python.org/3.1/library/string.html#format-specification-mini-language"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jim, Carl, and Nancy are going on a trip'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a= 'Jim'\n",
     "b = 'Carl'\n",
@@ -527,9 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Nancy's salary is $122000 per year.\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Can use modifiers to format the variable display\n",
     "salary = 122000\n",
@@ -538,9 +587,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Nancy's salary is $122,000.00 per year.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fancier number (currency) formatting\n",
     "\"{:}'s salary is ${:,.2f} per year.\".format(c, salary)"
@@ -548,9 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.141592653589793, '3.1416')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use a string format to control the output format.  Note\n",
     "# that this creates a string object\n",
@@ -559,9 +630,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1416"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Can also use the round() function to achieve a similar\n",
     "# result, but this function returns a numeric rather than string object\n",
@@ -570,12 +652,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(str, float)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Notice that format() creates a string whereas round \"keeps\" the float.\n",
     "type(\"{:.4f}\".format(math.pi)), type(round(math.pi,4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Formatted String Literals -- f-strings\n",
+    "\n",
+    "Introduced in Python 3.6 - https://peps.python.org/pep-0498/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Nancy's salary is 122,000.00 per year.\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# f-strings - Formatted string literals\n",
+    "f\"{c}'s salary is {salary:,.2f} per year.\""
    ]
   },
   {
@@ -588,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
