Re-organizing and Renaming the Notebooks
Trying to organize based on usage sequence.

--- a/notebooks/0.0 Course Title and Information.ipynb
+++ b/notebooks/0.0 Course Title and Information.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# INSY 6500/5500 - Modern Tools for Data Science\n",
     "\n",
-    "## Current course offering : Fall 2021\n",
+    "## Current course offering : Fall 2022\n",
     "\n",
     "<b>Jeffrey S. Smith</b>\n",
     "<br>Joe W. Forehand Professor\n",
@@ -43,22 +43,21 @@
     "<b>Topics by Week</b>\n",
     "<br>(subect to change based on course progress)\n",
     "<ol>\n",
-    "<li>Course introduction, technology toolkit\n",
-    "<li>Introduction to Data Analytics and Modeling\n",
-    "<li>Introduction to Python\n",
+    "<li>Course Introduction, Course Technology Toolkit\n",
+    "<li>Python - Introduction, Programming Basics\n",
     "<li>Python Programming Basics\n",
     "<li>Python – Numpy, SciPy\n",
     "<li>Python - Pandas\n",
     "<li>Python - Pandas\n",
     "<li>Python – Matplotlib\n",
+    "<li>Midterm Exam (and Fall Break)\n",
     "<li>Sample Data Sets 1 and Data Preprocessing\n",
-    "<li>Modeling\n",
-    "<li>Modeling\n",
-    "<li>R, RStudio, CRAN\n",
-    "<li>R Basics\n",
+    "<li>Introduction to Data Analytics and Modeling with Python\n",
+    "<li>Modeling with Scikit-Learn\n",
+    "<li>R, RStudio, CRAN, R Basics\n",
     "<li>Data Handling with R Data Frames\n",
-    "<li>Data Visualization and Exploratory Data Analysis (EDA)\n",
-    "<li>Modeling\n",
+    "<li>Tidyverse, Data Visualization and Exploratory Data Analysis (EDA)\n",
+    "<li>Modeling with R\n",
     "</ol>"
    ]
   },
@@ -72,7 +71,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
