--- a/notebooks/0.1 Course Toolkit and Reference Materials.ipynb
+++ b/notebooks/0.1 Course Toolkit and Reference Materials.ipynb
@@ -7,7 +7,7 @@
     "# Course Toolkit and Reference Tools\n",
     "Our toolkit will consist of several computer tools -- most are freely available.  We highly recommend that you install the course toolkit on your personal computer and the first homework assignment will involve installing the sofware in the toolkit.  The toolkit will be installed in the ISE computer labs, but you will have much more flexibility using your own.  You should also feel free to bring your notebook computers to class.\n",
     "\n",
-    "The offical OS for the course is Windows 10 (this the OS installed in our labs and on my computers).  However, virtually all of the software that we will use is also available for OSX (Mac) and Linux.  I will try to assist where I can, but I do not have much experience with installing the software in these environments.\n",
+    "The offical OS for the course is Windows 10 - this the OS installed in our labs (I use Windows 11 on my computers).  However, virtually all of the software that we will use is also available for OSX (Mac) and Linux.  I will try to assist where I can, but I do not have much experience with installing the software in these environments.\n",
     "\n",
     "We will also use a variety of books and web references - provided in the section below (note that I will update this as the semester progresses).\n"
    ]
@@ -25,7 +25,6 @@
     "Amazon and at https://jakevdp.github.io/PythonDataScienceHandbook/.\n",
     "<li />Grolemund, G. and Wickham, H. <i>R for Data Science</i>, O'Reilly Media, 2017.  Available on Amazon and at http://r4ds.had.co.nz/.\n",
     "<li />Lutz, M. <i>Learning Python, 5th Edition</i>, O'Reilly Media, 2013. (note that this book covers Python 2.7 rather than 3.x).\n",
-    "<li />Tahaghoghi, S.M.M. and H.E. Williams, <i>Learning MySQL</i>, O'Reilly Media, 2007.\n",
     "</ul>\n",
     "\n",
     "   \n",
@@ -38,6 +37,7 @@
     "    <li />Pandas - http://pandas.pydata.org/\n",
     "    <li />Matplotlib - https://matplotlib.org/\n",
     "    <li />Seaborn - http://seaborn.pydata.org/index.html\n",
+    "    <li />Scikit-Learn - https://scikit-learn.org/stable/\n",
     "    <li />The R Project for Statistical Computing - https://www.r-project.org/\n",
     "    <li />RStudio - https://www.rstudio.com/\n",
     "    <li /> CRAN - https://cran.r-project.org/\n",
@@ -85,7 +85,7 @@
    "source": [
     "## R\n",
     "\n",
-    "We will use a \"current\" version of R for this course.  I currently have version 4.04 installed on my computer, but I recommend that you install the latest stable version (a list of R mirror sites is available at https://cran.r-project.org/mirrors.html).  We will also make significant use of the packages that comprise the Tidyverse (https://tidyverse.org).\n"
+    "We will use a \"current\" version of R for this course.  I currently have version 4.1.0 installed on my computer, but I recommend that you install the latest stable version (a list of R mirror sites is available at https://cran.r-project.org/mirrors.html).  We will also make significant use of the packages that comprise the Tidyverse (https://tidyverse.org).\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
