--- a/notebooks/3.2.2 SCPAY Aggregation and Grouping Example.ipynb
+++ b/notebooks/3.2.2 SCPAY Aggregation and Grouping Example.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9a73206e",
    "metadata": {},
    "source": [
     "# Aggregation and Grouping Example - South Carolina Pay Dataset\n",
@@ -12,6 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d1aab0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3cb80d16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1474a866",
    "metadata": {},
    "source": [
     "## Using the whole dataset"
@@ -49,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17b54bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "180a7bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f52098cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6adbaeba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57e91e63",
    "metadata": {},
    "source": [
     "## Using Aggregation and Grouping"
@@ -97,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "87a910ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "60bf3d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "adb70260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "134f3fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f49de82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff7786de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4bbb028e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39be4891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1806ab0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "181fa4ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c5dc456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11f87657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d51b0a7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d87ab187",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
