Updating File Names
Trying to use the outline numbering.

--- a/notebooks/1.3.1 File Reading Example.ipynb
+++ b/notebooks/1.3.1 File Reading Example.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foreign Exchange Rate Dataset File Reading\n",
+    "# 1.3.1 File Reading Example - Foreign Exchange Rate Dataset\n",
+    "\n",
     "Datafile: \"14_Foreign_Exchange_Rates_PureNumeric.csv.csv\"\n",
     "\n",
     "Originally developed by Jingwei Liu (2020-08-29)\n"
@@ -248,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
