--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -17,7 +17,7 @@
     "VanderPlas, J. <i>Python Data Science Handbook: Essential Tools for Working with Data</i>, O'Reilly Media, 2016.  Available on \n",
     "Amazon and at https://jakevdp.github.io/PythonDataScienceHandbook/.\n",
     "\n",
-    "Note that this is not a book that teaches Python.  Instead, it's focused on using Python for Data Science. "
+    "Note that this is not a book that teaches Python or programming.  Instead, it's focused on using Python for *Data Science*. "
    ]
   },
   {
@@ -95,10 +95,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (Temp/ipykernel_26252/3895432023.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jsmith\\AppData\\Local\\Temp/ipykernel_26252/3895432023.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    j = i + 1\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
+    "# If you don't use indenion as Python expects, it will let you know.\n",
+    "for i in range(5):\n",
+    "j = i + 1\n",
+    "print (\"[{:}] Hello World!\".format(j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note here that we indent for the \"for\" block and again for the \"if\" block.\n",
+    "# This is called nested indention -- and it generally makes code more \"readable\"\n",
     "for i in range(20):\n",
     "    if i % 2:\n",
     "        print(i)"
@@ -120,13 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246.77428571428572\n"
+     ]
+    }
+   ],
    "source": [
     "# simple implementation of the pseudo code from Slide 5 of the Intro to \n",
     "#   Python slide set.\n",
     "Numbers = [123, 87, 96, 24, 104, 16, 55, 24, 19, 86, 776, 1945, 87.5, 12.34]\n",
+    "# Uncomment the next line if you want to see the error message\n",
+    "#Numbers = []\n",
     "Total = 0\n",
     "Count = 0\n",
     "for Num in Numbers:\n",
@@ -542,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +601,7 @@
        "'Jim, Carl, and Nancy are going on a trip'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +624,7 @@
        "\"Nancy's salary is $122000 per year.\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,12 +727,12 @@
    "source": [
     "#### Formatted String Literals -- f-strings\n",
     "\n",
-    "Introduced in Python 3.6 - https://peps.python.org/pep-0498/"
+    "Introduced in Python 3.6 - https://peps.python.org/pep-0498/.  The behavior is the similar to the format() function and they can be easier to read and create."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +741,7 @@
        "\"Nancy's salary is 122,000.00 per year.\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
