--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -45,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "# To remember this, think \"get current working directory.\"  This is the base\n",
@@ -65,17 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (\"Hello World!\")"
    ]
@@ -90,52 +74,26 @@
     "#   to identify blocks, Python uses intention.  \n",
     "for i in range(5):\n",
     "    j = i + 1\n",
-    "    print (\"[{:}] Hello World!\".format(j))"
+    "    print (f\"{j} Hello World!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (Temp/ipykernel_26252/3895432023.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jsmith\\AppData\\Local\\Temp/ipykernel_26252/3895432023.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    j = i + 1\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If you don't use indenion as Python expects, it will let you know.\n",
     "for i in range(5):\n",
     "j = i + 1\n",
-    "print (\"[{:}] Hello World!\".format(j))"
+    "print (f\"{j} Hello World!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note here that we indent for the \"for\" block and again for the \"if\" block.\n",
     "# This is called nested indention -- and it generally makes code more \"readable\"\n",
@@ -160,17 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "246.77428571428572\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# simple implementation of the pseudo code from Slide 5 of the Intro to \n",
     "#   Python slide set.\n",
@@ -360,20 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.141592653589793, 3.141592653589793, 3.141592653589793)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# More on Namespaces - three different Pi constants ...\n",
     "# Overlap in constants for pi -- one in each namespace\n",
@@ -592,20 +531,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Jim, Carl, and Nancy are going on a trip'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a= 'Jim'\n",
     "b = 'Carl'\n",
@@ -615,20 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Nancy's salary is $122000 per year.\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Can use modifiers to format the variable display\n",
     "salary = 122000\n",
@@ -637,20 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Nancy's salary is $122,000.00 per year.\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fancier number (currency) formatting\n",
     "\"{:}'s salary is ${:,.2f} per year.\".format(c, salary)"
@@ -658,20 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.141592653589793, '3.1416')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use a string format to control the output format.  Note\n",
     "# that this creates a string object\n",
@@ -680,20 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.1416"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Can also use the round() function to achieve a similar\n",
     "# result, but this function returns a numeric rather than string object\n",
@@ -702,20 +586,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(str, float)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Notice that format() creates a string whereas round \"keeps\" the float.\n",
     "type(\"{:.4f}\".format(math.pi)), type(round(math.pi,4))"
@@ -732,20 +605,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Nancy's salary is 122,000.00 per year.\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# f-strings - Formatted string literals\n",
     "f\"{c}'s salary is {salary:,.2f} per year.\""
