Updates for start of Fall 2022 Semester
Updates for start of Fall 2022 Semester.

--- a/notebooks/Customer Arrival Process.ipynb
+++ b/notebooks/Customer Arrival Process.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Here we are interested in making a visual assessment of the stationarity of the customer arrival process using a 10-day sample of customer arrival times.\n",
     "\n",
-    "Video Module: http://jsmith.co/node/257"
+    "Video Module: https://jsmith.co/educational-modules/analytics-course-modules/python-related-videos/"
    ]
   },
   {
