--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# To remember this, think \"get current working directory.\"  This is the base\n",
@@ -57,18 +65,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"Hello World!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Hello World!\n",
+      "2 Hello World!\n",
+      "3 Hello World!\n",
+      "4 Hello World!\n",
+      "5 Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "# Unlike many languages that use {} and other start/end identifers\n",
     "#   to identify blocks, Python uses intention.  \n",
@@ -79,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (Temp/ipykernel_6772/1656954014.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jsmith\\AppData\\Local\\Temp/ipykernel_6772/1656954014.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    j = i + 1\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# If you don't use indenion as Python expects, it will let you know.\n",
     "for i in range(5):\n",
@@ -91,9 +128,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "# Note here that we indent for the \"for\" block and again for the \"if\" block.\n",
     "# This is called nested indention -- and it generally makes code more \"readable\"\n",
