Update 0.0 Course Title and Information.ipynb
Updated the weekly schedule.

--- a/notebooks/0.0 Course Title and Information.ipynb
+++ b/notebooks/0.0 Course Title and Information.ipynb
@@ -43,21 +43,22 @@
     "<b>Topics by Week</b>\n",
     "<br>(subect to change based on course progress)\n",
     "<ol>\n",
-    "<li>Course Introduction, Course Technology Toolkit\n",
-    "<li>Python - Introduction, Programming Basics\n",
+    "<li>Course introduction, technology toolkit\n",
+    "<li>Introduction to Python, Jupyter\n",
+    "<li>Python Programming Basics\n",
+    "<li>Python Programming Basics\n",
     "<li>Python Programming Basics\n",
     "<li>Python – Numpy, SciPy\n",
-    "<li>Python - Pandas\n",
-    "<li>Python - Pandas\n",
-    "<li>Python – Matplotlib\n",
-    "<li>Midterm Exam (and Fall Break)\n",
-    "<li>Sample Data Sets 1 and Data Preprocessing\n",
-    "<li>Introduction to Data Analytics and Modeling with Python\n",
-    "<li>Modeling with Scikit-Learn\n",
-    "<li>R, RStudio, CRAN, R Basics\n",
-    "<li>Data Handling with R Data Frames\n",
-    "<li>Tidyverse, Data Visualization and Exploratory Data Analysis (EDA)\n",
-    "<li>Modeling with R\n",
+    "<li>Python – Pandas\n",
+    "<li>Exam 1 + Fall Break\n",
+    "<li>Python – Matplotlib + Modeling\n",
+    "<li>Python – Modeling with Scikitllearn\n",
+    "<li>Modeling\n",
+    "<li>R, RStudio, Data Manipulation with R DataFrames\n",
+    "<li>Data Visualization and Data Manipulation\n",
+    "<li>Data Manipulation and Exploratory Data Analysis (EDA)\n",
+    "<li>Thanksgiving Week\n",
+    "<li>Modeling + Exam 2\n",
     "</ol>"
    ]
   },
@@ -85,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
