Update 1.3.1 File Reading Example - Basketball Dataset.ipynb
More changes to the read file example.

--- a/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
+++ b/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
@@ -8,7 +8,8 @@
     "Datafile: \"College Basketball Dataset.csv\"<br>\n",
     "Datafile description:\"College basketball-Description.pdf\"\n",
     "\n",
-    "Updated by Jingwei Liu (2021-2-15)\n"
+    "Updated by Jingwei Liu (2021-2-15)\n",
+    "Updated by Jeff Smith (2022-08-16)"
    ]
   },
   {
@@ -21,19 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "one\ttwo\tthree\n",
-      "four\tfive\tsix\n",
-      "seven\teight\tnine\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a \"ShowData\" function \n",
     "#  dataset is a list of lists\n",
@@ -65,27 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 2 rows in the dataset\n",
-      "There are 3 columns in the dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a \"ShowRowsAndCols\" function which show the number of rows and columns in the dataset\n",
     "# dataset is a list of list. Row number means how many elements in the list. Column number means how many elements in each element list.\n",
-    "def ShowRowsAndCols(dataset = [[\"No dataset sent\"]]): \n",
+    "def ShowShape(dataset = [[\"No dataset sent\"]]): \n",
     "    print(\"There are {} rows in the dataset\".format(len(dataset)))\n",
-    "    print(\"There are {} columns in the dataset\".format(len(dataset[1])))\n",
+    "    print(\"There are {} columns in the dataset\".format(len(dataset[0])))\n",
     "    \n",
     "# sample calls\n",
-    "ShowRowsAndCols([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"]])"
+    "ShowShape([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"]])"
    ]
   },
   {
@@ -104,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,10 +98,11 @@
     "fname = \"../Data/College Basketball Dataset.csv\"\n",
     "f = open(fname, \"r\")\n",
     "# you can select which part of the dataset you want to read\n",
-    "# Ex. we can ignore the first 5 lines\n",
+    "# Ex. we can ignore the first 5 lines.  Note that we read 6 lines\n",
+    "# (0, 1, 2, ... 5) in this loop, but we use the last one read \n",
     "for i in range(6):\n",
     "    line = f.readline()\n",
-    "# loop until we run out of lines\n",
+    "# loop until we run out of lines.  Start the loop with the last row read.\n",
     "while (line):\n",
     "    # strip the newline and tokenize (split on commas, in this case)\n",
     "    tokens = line.rstrip().split(',')\n",
@@ -128,7 +111,9 @@
     "    # read the next line\n",
     "    line = f.readline()\n",
     "# close the file\n",
-    "f.close()\n"
+    "f.close()\n",
+    "# Show the shape\n",
+    "ShowShape(data1)"
    ]
   },
   {
@@ -152,43 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Kentucky',\n",
-       " 'SEC',\n",
-       " '40',\n",
-       " '29',\n",
-       " '117.2',\n",
-       " '96.2',\n",
-       " '0.9062',\n",
-       " '49.9',\n",
-       " '46.0',\n",
-       " '18.1',\n",
-       " '16.1',\n",
-       " '42.0',\n",
-       " '29.7',\n",
-       " '51.8',\n",
-       " '36.8',\n",
-       " '50.0',\n",
-       " '44.9',\n",
-       " '33.2',\n",
-       " '32.2',\n",
-       " '65.9',\n",
-       " '3.9',\n",
-       " '2ND',\n",
-       " '8.0',\n",
-       " '2014']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data1[0]"
    ]
@@ -202,40 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'39'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data1[0][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(data1[0][3])"
    ]
@@ -260,9 +189,17 @@
     "# Grab all the lines from the file starting with line 1, strip\n",
     "# the newline and tokenize\n",
     "with open(\"../Data/College Basketball Dataset.csv\") as f:\n",
-    "    data2 = [line.rstrip().split(',') for line in f.readlines()[1:]]\n",
+    "    data2 = [line.rstrip().split(',') for line in f.readlines()[1:]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# show the data\n",
-    "ShowData(data2)\n"
+    "ShowData(data2)"
    ]
   },
   {
@@ -288,7 +225,15 @@
     "with open(\"../Data/College Basketball Dataset.csv\") as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
-    "        data3.append(row)\n",
+    "        data3.append(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# show the data\n",
     "ShowData(data3)"
    ]
@@ -303,26 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 1753 rows in the dataset\n",
-      "There are 24 columns in the dataset\n",
-      "There are 1757 rows in the dataset\n",
-      "There are 24 columns in the dataset\n",
-      "There are 1758 rows in the dataset\n",
-      "There are 24 columns in the dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ShowRowsAndCols(data1)\n",
-    "ShowRowsAndCols(data2)\n",
-    "ShowRowsAndCols(data3)"
+    "ShowShape(data1)\n",
+    "ShowShape(data2)\n",
+    "ShowShape(data3)"
    ]
   },
   {
@@ -335,20 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31.52305065452476"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sum = 0\n",
     "# iterate from first row to last row\n",
@@ -368,47 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['TEAM',\n",
-       " 'CONF',\n",
-       " 'G',\n",
-       " 'W',\n",
-       " 'ADJOE',\n",
-       " 'ADJDE',\n",
-       " 'BARTHAG',\n",
-       " 'EFG_O',\n",
-       " 'EFG_D',\n",
-       " 'TOR',\n",
-       " 'TORD',\n",
-       " 'ORB',\n",
-       " 'DRB',\n",
-       " 'FTR',\n",
-       " 'FTRD',\n",
-       " '2P_O',\n",
-       " '2P_D',\n",
-       " '3P_O',\n",
-       " '3P_D',\n",
-       " 'ADJ_T',\n",
-       " 'WAB',\n",
-       " 'POSTSEASON',\n",
-       " 'SEED',\n",
-       " 'YEAR']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the dataset that includes the headers (data3)\n",
     "data3[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -427,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
