Update 1.3.1 File Reading Example - Basketball Dataset.ipynb
Tweaks.

--- a/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
+++ b/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
@@ -9,7 +9,7 @@
     "Datafile description:\"College basketball-Description.pdf\"\n",
     "\n",
     "Updated by Jingwei Liu (2021-2-15)\n",
-    "Updated by Jeff Smith (2022-08-16)"
+    "<br>Updated by Jeff Smith (2022-08-16)"
    ]
   },
   {
@@ -34,7 +34,11 @@
     "        print (\"\\t\".join(r))\n",
     "\n",
     "# sample calls\n",
-    "ShowData([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"], [\"seven\", \"eight\", \"nine\"]])"
+    "ShowData([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"], [\"seven\", \"eight\", \"nine\"]])\n",
+    "#\n",
+    "# Note that this is a simplistic function that shows all of the data.  You would probably want\n",
+    "# to add some arguments that controlled how much of the data to show (e.g., the first 10 \"rows\").\n",
+    "# We'll get to that later, though."
    ]
   },
   {
@@ -61,13 +65,17 @@
    "outputs": [],
    "source": [
     "# Define a \"ShowRowsAndCols\" function which show the number of rows and columns in the dataset\n",
-    "# dataset is a list of list. Row number means how many elements in the list. Column number means how many elements in each element list.\n",
+    "# dataset is a list of list. Row number means how many elements in the list. Column number \n",
+    "# means how many elements in each element list.\n",
     "def ShowShape(dataset = [[\"No dataset sent\"]]): \n",
     "    print(\"There are {} rows in the dataset\".format(len(dataset)))\n",
     "    print(\"There are {} columns in the dataset\".format(len(dataset[0])))\n",
     "    \n",
     "# sample calls\n",
-    "ShowShape([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"]])"
+    "ShowShape([[\"one\", \"two\", \"three\"], [\"four\", \"five\", \"six\"]])\n",
+    "#\n",
+    "# This one is also simplistic.  Later, we will see a single \"show\" function that shows the \n",
+    "# structure information and, optionally, some or all of the data."
    ]
   },
   {
@@ -148,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, Let's try to check the value and data type of the <font color = \"red\">**third**</font> element of the <font color = \"red\">**first**</font> row:"
+    "Now, Let's try to check the value and data type of the <font color = \"red\">**third**</font> element of the <font color = \"red\">**first**</font> row (remember, since Python lists are zero-based, both indices start with 0):"
    ]
   },
   {
@@ -157,16 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1[0][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(data1[0][3])"
+    "data1[0][2], type(data1[0][2])\n",
+    "# Note that the output is an anonymous touple."
    ]
   },
   {
@@ -189,7 +189,9 @@
     "# Grab all the lines from the file starting with line 1, strip\n",
     "# the newline and tokenize\n",
     "with open(\"../Data/College Basketball Dataset.csv\") as f:\n",
-    "    data2 = [line.rstrip().split(',') for line in f.readlines()[1:]]\n"
+    "    data2 = [line.rstrip().split(',') for line in f.readlines()[1:]]\n",
+    "\n",
+    "# Note the use of the comprehension and the list slicing here.  Both are very useful."
    ]
   },
   {
@@ -271,13 +273,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum = 0\n",
+    "total = 0\n",
     "# iterate from first row to last row\n",
     "for i in data2:\n",
     "    # add Australia data of every row to sum\n",
-    "    sum = sum + float(i[2])\n",
-    "mean = sum/len(data2)\n",
+    "    total = total + float(i[2])\n",
+    "mean = total/len(data2)\n",
     "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or with a comprehension\n",
+    "sum([float(i[2]) for i in data2])/len(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or with a more user-friendly format\n",
+    "print(f\"\")"
    ]
   },
   {
@@ -321,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
