--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -610,7 +610,11 @@
    "outputs": [],
    "source": [
     "# f-strings - Formatted string literals\n",
-    "f\"{c}'s salary is {salary:,.2f} per year.\""
+    "f\"{c}'s salary is {salary:,.2f} per year.\"\n",
+    "\n",
+    "# Compare this version to the format() version\n",
+    "# \"{:}'s salary is ${:} per year.\".format(c, salary)\n",
+    "# You decide which is easier for you :-)."
    ]
   },
   {
@@ -637,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
