Added some additional examples/comments
Minor tweaks.

--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -162,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to *see* these examples in more detail, try pasting them into Sypder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -178,8 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Range objects (more on the Range object in the Lists section of the notes)\n",
-    "range(10), type(range(10)), list(range(10))"
+    "# check the current value of the variable j after the previous loop.  What should it be?\n",
+    "j\n",
+    "# The loop exit condition is that the value j is the \"last\" value in the list"
    ]
   },
   {
@@ -188,6 +196,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Range objects (more on the Range object in the Lists section of the notes)\n",
+    "range(10), type(range(10)), list(range(10))\n",
+    "# Note that what is displayed is a tuple with three items: the range object, it's type, and a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Very flexible -- arguements are start, stop, and step value\n",
     "list(range(2, 20, 2))"
    ]
   },
@@ -610,11 +630,24 @@
    "outputs": [],
    "source": [
     "# f-strings - Formatted string literals\n",
-    "f\"{c}'s salary is {salary:,.2f} per year.\"\n",
+    "f\"{c}'s salary is ${salary:,.2f} per year.\"\n",
     "\n",
     "# Compare this version to the format() version\n",
     "# \"{:}'s salary is ${:} per year.\".format(c, salary)\n",
-    "# You decide which is easier for you :-)."
+    "# You decide which is easier for you, but it often important to have\n",
+    "# user-friently formatting :-)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure that the math module has been imported or uncomment the next line\n",
+    "#import math\n",
+    "str = f\"Long value of pi: {math.pi}; and a shorter value of pi: {math.pi:.3f}\"\n",
+    "str"
    ]
   },
   {
@@ -641,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
