--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1.1 Python Lists and Dictionaries\n",
     "\n",
-    "This section introduces Python lists, dictionaries and comprehensions.  The objects are foundational to Python and are used extensively."
+    "This section introduces Python lists, dictionaries and comprehensions.  The objects are foundational to Python and are used extensively - espically in data science-related contexts."
    ]
   },
   {
@@ -23,8 +23,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a list and then show the list.  Note that the list contains objects of \n",
-    "# different types (ints, floats, strings).\n",
+    "# A simple list of integers\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or strings\n",
+    "l = ['a', 'b','dog', 'Hello World!']\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a more interesting list and then show the list.  Note that this list contains objects of \n",
+    "# different types (ints, floats, strings, lists, dictionaries).\n",
     "l1 = [1, 2, 3, 17.24, 967, 45, \"dog\", 'cat', [1, 2, 3], {'one':1, 'two':2}]\n",
     "l1"
    ]
@@ -69,7 +91,9 @@
    "source": [
     "# as compared to the traditional indexing method ...\n",
     "for j in range(len(l1)):\n",
-    "    print(l1[j])"
+    "    print(l1[j])\n",
+    "# Note here that we did not explicitly give the list length (i.e., range(10)), but\n",
+    "# used the len() function to do that implicitly."
    ]
   },
   {
@@ -1126,7 +1150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1140,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
